force-app/main/default/objects/Floorwalk_Training_Plan__c/Floorwalk_Training_Plan__c.object-meta.xml
<CustomObject>
    <label>AU Training Completion Report</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AU Training Completion Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>