force-app/main/default/objects/Floorwalk_Training_Plan__c/fields/Actual_number_of_trainees__c.field-meta.xml
<CustomField>
    <fullName>Actual_number_of_trainees__c</fullName>
    <label>Actual number of trainees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>