force-app/main/default/objects/Floorwalk_Training_Plan__c/fields/ExternalKey__c.field-meta.xml
<CustomField>
    <fullName>ExternalKey__c</fullName>
    <description>天+人（同店其他日报作为归拢指标）</description>
    <externalId>true</externalId>
    <label>ExternalKey</label>
    <length>255</length>
    <type>Text</type>
</CustomField>