force-app/main/default/objects/Floorwalk_Training_Plan__c/fields/Report_Date__c.field-meta.xml
<CustomField>
    <fullName>Report_Date__c</fullName>
    <label>Date</label>
    <type>Date</type>
</CustomField>