force-app/main/default/objects/Floorwalk_Training_Plan__c/fields/Target_number_of_trainees__c.field-meta.xml
<CustomField>
    <fullName>Target_number_of_trainees__c</fullName>
    <description>预期指标</description>
    <label>Target number of trainees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>